fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,8 @@ select, button {
 
 .col-md-4 {
   padding: 2%; }
+.col-xs-4 {
+  padding: 2%; }
 
 .col-md-2 {
   padding: 3%; }
